tests/Should_succeed/2_Variables/26_DiverseGlobalDecl.decaf
class Test {
	int a;
	boolean b;
	int c[1];
	boolean d[1];
	void main(){
		WriteInt(a);
		WriteString("=0");
		WriteString("\n");
		WriteBool(b);
		WriteString("=false");
		WriteString("\n");
		WriteInt(c[0]);
		WriteString("=0");
		WriteString("\n");
		WriteBool(d[0]);
		WriteString("=false");
		WriteString("\n");
	}
}